--- a/src/sass/theme/blocks/_cb_pricing.scss
+++ b/src/sass/theme/blocks/_cb_pricing.scss
@@ -83,6 +83,7 @@
   &__actions {
     .btn {
       width: 100%;
+      font-size: var(--fs-menu-intro);
     }
     a {
       color: var(--col-dark-grey);
